crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__cert_notfound_at_height.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "ResourceNotFound(\"Certificate(2, height 3)\")"
snapshot_kind: text
---
{
  "code": -10008,
  "data": {
    "resource-not-found": "Certificate(2, height 3)"
  },
  "message": "Resource not found: Certificate(2, height 3)"
}
