crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__cert_sig.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "SignatureMismatch { detail: \"could not recover certificate signer: Signature recovery error\" }"
---
{
  "code": -10002,
  "data": {
    "signature-mismatch": {
      "detail": "could not recover certificate signer: Signature recovery error"
    }
  },
  "message": "Rollup signature verification failed"
}
