crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__dry_run.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "Validation(DryRun { detail: \"Dry run flopped.\" })"
---
{
  "code": -10003,
  "data": {
    "validation": {
      "dry-run": {
        "detail": "Dry run flopped."
      }
    }
  },
  "message": "Validation failed: Dry run failed"
}
