crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__dry_run_rollup_man.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "Validation(DryRun { detail: \"PolygonRollupManager contract error FinalNumBatchBelowLastVerifiedBatch(FinalNumBatchBelowLastVerifiedBatch)\" })"
---
{
  "code": -10003,
  "data": {
    "validation": {
      "dry-run": {
        "detail": "PolygonRollupManager contract error FinalNumBatchBelowLastVerifiedBatch(FinalNumBatchBelowLastVerifiedBatch)"
      }
    }
  },
  "message": "Validation failed: Dry run failed"
}
