crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__method_disabled.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "MethodDisabled { method: \"interop_sendTx\" }"
---
{
  "code": -10009,
  "data": {
    "method-disabled": {
      "method": "interop_sendTx"
    }
  },
  "message": "The interop_sendTx method is disabled"
}
