crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__rate_disallowed.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "RateLimited { detail: \"The `sendTx` settlement disabled by rate limiter\", error: SendTxDisabled }"
---
{
  "code": -10007,
  "data": {
    "rate-limited": {
      "detail": "The `sendTx` settlement disabled by rate limiter",
      "error": {
        "send-tx-disabled": {}
      }
    }
  },
  "message": "Rate limited"
}
