crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__rate_sendtx.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "RateLimited { detail: \"The `sendTx` settlement has been limited\", error: SendTxRateLimited(RateLimited { max_per_interval: 3, time_interval: 1800s, until_next: Some(123s) }) }"
snapshot_kind: text
---
{
  "code": -10007,
  "data": {
    "rate-limited": {
      "detail": "The `sendTx` settlement has been limited",
      "error": {
        "send-tx-rate-limited": {
          "max-per-interval": 3,
          "time-interval": 1800,
          "until-next": 123
        }
      }
    }
  },
  "message": "Rate limited"
}
