crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__rate_sendtx_nonext.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "RateLimited { detail: \"The `sendTx` settlement has been limited\", error: SendTxRateLimited(RateLimited { max_per_interval: 4, time_interval: 2400s, until_next: None }) }"
snapshot_kind: text
---
{
  "code": -10007,
  "data": {
    "rate-limited": {
      "detail": "The `sendTx` settlement has been limited",
      "error": {
        "send-tx-rate-limited": {
          "max-per-interval": 4,
          "time-interval": 2400,
          "until-next": null
        }
      }
    }
  },
  "message": "Rate limited"
}
