crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__root_bad_rollup.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "Validation(RootVerification { detail: \"invalid rollup id: 13\" })"
---
{
  "code": -10003,
  "data": {
    "validation": {
      "root-verification": {
        "detail": "invalid rollup id: 13"
      }
    }
  },
  "message": "Validation failed: State root verification failed"
}
