crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__root_exit.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "Validation(RootVerification { detail: \"invalid exit root. expected: 0x7777777777777777777777777777777777777777777777777777777777777777, got: 0x8888888888888888888888888888888888888888888888888888888888888888\" })"
---
{
  "code": -10003,
  "data": {
    "validation": {
      "root-verification": {
        "detail": "invalid exit root. expected: 0x7777777777777777777777777777777777777777777777777777777777777777, got: 0x8888888888888888888888888888888888888888888888888888888888888888"
      }
    }
  },
  "message": "Validation failed: State root verification failed"
}
