crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__root_rpc.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "Validation(RootVerification { detail: \"rpc error: Custom error: Node smells too much\" })"
---
{
  "code": -10003,
  "data": {
    "validation": {
      "root-verification": {
        "detail": "rpc error: Custom error: Node smells too much"
      }
    }
  },
  "message": "Validation failed: State root verification failed"
}
